<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EasyFitRecipes</string>
    <string name="facebook_app_id">351209915307805</string>
    <string name="fb_login_protocol_scheme">fb351209915307805</string>
    <string name="google_maps_key">AIzaSyD0k7l1Vu_284Aji18-8qE--r3EJ2x1GcM</string>

    <!-- MENU TITLE-->
    <string name="title_activity_login">Login</string>
    <string name="title_activity_menu">Recipes</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_createrecipe">Create a recipe</string>
    <string name="title_activity_share">Share</string>

    <!-- MENU -->
    <string name="titlemenu_home">Home</string>
    <string name="titlemenu_createrecipe">Create a recipe</string>
    <string name="titlemenu_maps">Maps</string>
    <string name="titlemenu_share">Share</string>
    <string name="titlemenu_about">About</string>
    <string name="titlemenu_exit">Exit</string>

    <!-- ACTIVITY MENU-->
    <string name="tv_optbreakfast">Breakfast</string>
    <string name="tv_optlunch">Lunch</string>
    <string name="tv_optdinner">Dinner</string>
    <string name="tv_optdessert">Dessert</string>

    <!-- ACTIVITY ABOUT-->
    <string name="about_design">easyfitrecipes</string>
    <string name="about_version">Version 1.0</string>
    <string name="about_versiontext">©2017 by Luana Martinez \nAll rights reserverd.</string>
    <string name="about_contact">Number contact</string>

    <!-- ACTIVITY CREATERECIPE-->
    <string name="t_title">Title</string>
    <string name="t_category">Category</string>
    <string name="t_ingredients">Ingredients</string>
    <string name="t_description">Description</string>
    <string name="category_prompt">Select a category</string>
    <string name="bt_register">Register</string>
    <string-array name="category_arrays">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Dessert</item>
    </string-array>
    <string name="msg_button_edit">Modify</string>
    <string name="title_activity_editrecipe">Modify a recipe</string>

    <string name="insert_msgOk">Successfully register</string>
    <string name="insert_msgError">An error has occured trying to register the recipe.</string>

    <!-- ACTIVITY LOGIN-->
    <string name="ht_user">User</string>
    <string name="ht_password">Password</string>
    <string name="bt_login">Login</string>
    <string name="ck_keepconn">Keep me logged in</string>
    <string name="toast_msgerror">The user account does not exist, please try again.</string>
    <string name="ht_or">or</string>

    <!-- EXIT-->
    <string name="exit_title">Exit</string>
    <string name="exit_yes">SAIR</string>
    <string name="exit_cancel">CANCEL</string>
    <string name="exit_message">Are you sure you want to quit?</string>

    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>

    <!-- ACTIVITY MAP-->
    <string name="map_position">Current Position</string>
    <string name="title_activity_maps">Map</string>

    <string name="action_edit">Edit</string>
    <string name="action_remove">Remove</string>

    <!-- SUBMENU RECYCLER VIEW-->
    <string name="submenu_msg_title">Are you sure you wany to delete the recipe?</string>
    <string name="submenu_rec_yes">DELETE</string>
    <string name="submenu_rec_cancel">CANCEL</string>
    <string name="msg_submenu_ERR">Oops! It\'s not you. A server error, please try again!</string>
    <string name="msg_submenu_editOK">The recipe has registered with success.</string>
    <string name="msg_submenu_removeOK">The recipe has deleted with success.</string>
    <string name="update_msgOk">Successfully updated</string>
    <string name="update_msgError">An error has ocurred trying to update the receipe</string>
    <string name="err_msgtextview_title">The value title cannot be empty.</string>
    <string name="err_msgtextview_ingr">The value ingredients cannot be empty.</string>
    <string name="err_msgtextview_desc">The value description cannot be empty.</string>
    <string name="err_msgtextview">Please fill in all required fields.</string>
    <string name="number_cellphone" translatable="false">tel:+551150802002</string>
    <string name="err_msgimageview">Image can\'t be blank \n</string>
    <string name="url_web" translatable="false">https://github.com/lmartinezd/EasyFitRecipes</string>
    <string name="share_msg_ok">Successfully published !</string>
    <string name="layout_share_msg">Hello ! welcome to easyfitrecipes! \n\nPlease share this cute app :) !</string>

</resources>