<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="mjdev.com.br.easyfitrecipes.view.MenuActivity"
    tools:showIn="@layout/app_bar_menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/tv_optionbreakfast"
            android:text="@string/tv_optbreakfast"
            android:layout_weight="0.5"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:background="@color/colorOptBrk"
            android:clickable="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/tv_optionlunch"
            android:text="@string/tv_optlunch"
            android:layout_weight="0.5"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:background="@color/colorOptLun"
            android:clickable="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/tv_optiondinner"
            android:text="@string/tv_optdinner"
            android:layout_weight="0.5"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:background="@color/colorOptDin"
            android:clickable="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/tv_optiondessert"
            android:text="@string/tv_optdessert"
            android:layout_weight="0.5"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:background="@color/colorOptDes"
            android:clickable="true"/>
    </LinearLayout>
</LinearLayout>
