<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="mjdev.com.br.easyfitrecipes.view.LoginActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivlogo"
        android:src="@drawable/vegetableslogo"
        android:layout_weight="@dimen/layout_weight_ztwo"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilUserTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/layout_weight_ztwo"
            android:maxWidth="15dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tilUser"
                android:hint="@string/ht_user"
                android:maxLines="1"
                android:maxLength="30"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPasswordTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/layout_weight_ztwo">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tilPassword"
                android:hint="@string/ht_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:maxLength="15"/>
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ck_keepconn"
            android:id="@+id/ckKeepConn"
            android:layout_weight="@dimen/layout_weight_ztwo"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:layout_weight="@dimen/layout_weight_zeight">

        <Button
            android:textAllCaps="false"
            android:id="@+id/btLogin"
            android:text="@string/bt_login"
            android:layout_width="185dp"
            android:layout_height="37dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bg_button_rounded"
            android:textColor="@color/black"
            android:layout_marginBottom="@dimen/button_dezdp"
            android:layout_marginTop="@dimen/button_quarentadp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ht_or"
            android:layout_gravity="center_horizontal" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_buttonfb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/button_dezdp" />
    </LinearLayout>

</LinearLayout>
